# cosy-chess-py

./: .gitignore  Cargo.toml  LICENSE  README.md  cozy_chess.pyi  pyproject.toml
.github/workflows/: CI.yml  release.yml
src/: bitboard.rs  board.rs  board_builder.rs  castle_rights.rs  chess_move.rs  enums.rs  functions.rs  lib.rs  piece_moves.rs
tests/: test_cozy_chess.py
