[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cozy-chess"
version = "0.1.0"
description = "Python bindings for the cozy-chess Rust chess library"
requires-python = ">=3.8"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
